[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ak19-pubmed-paper-fetcher"
version = "0.1.0"
description = "Fetch and filter PubMed papers"
authors = ["atulak19 <atulkande1747@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pubmed_fetcher"}]
repository = "https://github.com/atulak19/pubmed-paper-fetcher"
keywords = ["pubmed", "research", "papers", "academic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]

[tool.poetry.dependencies]
python = ">=3.8"
requests = ">=2.32.0,<3.0.0"

[tool.poetry.scripts]
get-papers-list = "pubmed_fetcher.cli:main"
